# arxiv_gpt

./: .gitignore  .pre-commit-config.yaml  README.md  extra_arxiv_search_configs.example.json  extra_arxiv_search_configs.json  hawkes_mixture_exp_mle.py  main.py  pp_old.toml  pyproject.toml  ruff.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml  ruff.yml
src/: db.py  explain.py  main.py  prompts.py  settings.py
tests/: test_arxiv.py  test_dao.py  test_explain.py  test_gemini.py  test_main.py  test_sheet.py  test_summary.py
