[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "arxiv>=2.1.3",
    "discord-webhook>=1.3.0",
    "discord>=2.3.2",
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.383",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.setuptools]
package-dir = { "" = "src" }
