[project]
name = "arxiv-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "discord-webhook>=1.4.1",
    "google-generativeai>=0.8.5",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.3",
    "jax>=0.4.30",
    "optax>=0.1.9",
    "quadax>=0.3.6",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.3",
]
